name:                  latest-npm-version
version:               0.3.1
synopsis:              Find the latest version of a package on npm
description:           Determines the version number of the most recent package
                       on npm for a given name.
homepage:              https://github.com/passy/latest-npm-version
license:               MIT
license-file:          LICENSE
author:                Pascal Hartig
maintainer:            phartig@rdrei.net
category:              Network
build-type:            Simple
cabal-version:         >=1.10

source-repository head
  type:                git
  location:            git://github.com/passy/latest-npm-version.git


library
  ghc-options:         -Wall
  default-extensions:  OverloadedStrings
  exposed-modules:     Npm.Latest
  build-depends:       base == 4.*,
                       pipes-http >= 1.0 && < 1.1,
                       pipes >= 4.1 && < 4.2,
                       text >= 1.1 && < 1.3,
                       text-format >= 0.3 && < 0.4,
                       network >= 2.5 && < 2.7,
                       pipes-bytestring >= 2.0 && < 2.2,
                       aeson >= 0.7 && < 0.9,
                       pipes-attoparsec >= 0.5 && < 0.6,
                       transformers >= 0.3 && < 0.5,
                       lens >= 4.1 && < 4.10,
                       http-client >= 0.3 && < 0.5,
                       http-types == 0.8.*
  default-language:    Haskell2010

executable latest-npm-version
  main-is:             Main.hs
  ghc-options:         -Wall
  default-extensions:  OverloadedStrings
  build-depends:       base == 4.*,
                       pipes-http >= 1.0 && < 1.1,
                       pipes >= 4.1 && < 4.2,
                       text >= 1.1 && < 1.3,
                       text-format >= 0.3 && < 0.4,
                       network >= 2.5 && < 2.7,
                       pipes-bytestring >= 2.0 && < 2.2,
                       aeson >= 0.7 && < 0.9,
                       pipes-attoparsec >= 0.5 && < 0.6,
                       transformers >= 0.3 && < 0.5,
                       lens >= 4.1 && < 4.10,
                       http-client >= 0.3 && < 0.5,
                       http-types == 0.8.*
  default-language:    Haskell2010


Test-Suite hspec-tests
  main-is:        Tests/Main.hs
  type:           exitcode-stdio-1.0
  build-depends:  base,
                  hspec,
                  pipes-http >= 1.0 && < 1.1,
                  pipes >= 4.1 && < 4.2,
                  text >= 1.1 && < 1.3,
                  text-format >= 0.3 && < 0.4,
                  network >= 2.5 && < 2.7,
                  pipes-bytestring >= 2.0 && < 2.2,
                  aeson >= 0.7 && < 0.9,
                  pipes-attoparsec >= 0.5 && < 0.6,
                  transformers >= 0.3 && < 0.5,
                  lens >= 4.1 && < 4.10,
                  http-client >= 0.3 && < 0.5,
                  http-types == 0.8.*
